# raytracer

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  out.ppm  out2.ppm  out3.ppm  out6.ppm  out7.ppm  raytracer.cpp  scene.yaml  scene_exp.yaml  update-run.sh
.github/workflows/: cmake.yml
playground/yaml/: CMakeLists.txt  yaml_test.cpp
playground/yaml/notebook/: test_yaml_scene.ipynb
results/: bunny_high_res.ppm  out4.ppm  out5.ppm  out8.ppm  out9.ppm
src/: camera.cpp  camera.h  color.cpp  color.h  common.h  container.cpp  container.h  helper.cpp  helper.h  material.h  model.cpp  model.h  primitives.cpp  primitives.h  raytracer.cpp  scene.cpp  scene.h
